# software_renderer

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  frame.cpp  frame.h  main.cpp  maths.h  mesh.cpp  mesh.h  rasterizer.cpp  rasterizer.h  texture.cpp  texture.h  utils.cpp  utils.h  window.cpp  window.h
src/: camera.cpp  camera.h  frame.cpp  frame.h  light.h  main.cpp  maths.h  mesh.cpp  mesh.h  rasterizer.cpp  rasterizer.h  scene.cpp  scene.h  shader.h  texture.cpp  texture.h  timer.h  utils.cpp  utils.h  window.cpp  window.h
